Revision history for ExtUtils-Manifest

{{$NEXT}}

1.72  2019-03-10
  - also skip META_new.* (thanks, brian d foy!)

1.71  2018-05-15
  - also skip .travis.yml (thanks, Jerome Eteve!)
  - also skip .appveyor.yml (thanks, James E Keenan!)

1.70  2014-12-31
  - also skip _eumm, an artifact of ExtUtils::MakeMaker 7.05*
  - avoid unreliable permissions tests on cygwin

1.69  2014-11-16
  - also skip _build_params, generated by Module::Build::Tiny

1.68  2014-09-16
  - Fix regression with manifind() and following symlinks

1.66  2014-08-31
  - manifind() will now follow symlinks
  - Tests fixed if PERL_MM_MANIFEST_VERBOSE env var is set to
    false value
  - Fixed bug with maniread()'s handling of quoted filenames

1.65  2014-08-08
  - Support perls < v5.8.3 once again
  - Don't generate MANIFESTs with CRLFs on Windows

1.64  2014-07-17
  - Ignore vim swap files and prove generated files
  - use Exporter import
  - use 'our' instead of use vars

1.63  2013-09-08
  - Deal with VMS extended filespecs

1.62  2013-09-08
  - Normalize VMS case handling in ExtUtils::Manifest.

1.61  2012-09-11
  - Avoid some test-time warnings.
  - Current VMS can handle filenames with spaces.

1.60  2011-08-19
  - Clean up MANIFEST before creating a new one.

1.59  2011-08-08
  - Prevent mixing non-native and native newlines in MANIFEST files

1.58  2009-11-21
  - add MYMETA files to default skip list:
     http://rt.cpan.org/Ticket/Display.html?id=50923
    (suggested by DAGOLDEN)
  - Avoid Devel::Cover and Devel::CoverX::Covered files
    (suggested by daxim)

1.57  2009-09-19
  - Enhancements to MANIFEST.SKIP from Module::Build:
     http://rt.cpan.org/Ticket/Display.html?id=47401
  - ExtUtils::Manifest::maniskip() incorrectly parses some
    lines with comments and internal whitespace filenames:
      http://rt.cpan.org/Ticket/Display.html?id=45016

1.56  2009-01-04
  - Add support for VMS in Unix or extended character set mode:
     https://rt.cpan.org/Ticket/Display.html?id=42146
